keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-kc-service
  labels:
    app: my-kc-svc
spec:
  ports:
  - name: http
    port: 8010
    targetPort: 8011
  selector:
    app: my-kc-deployment
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-keycloak-deployment
  labels:
    app: my-kc-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:19.0.1
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8011
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
