keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
        - keycloak.192.168.59.102.nip.io
  rules:
    - host: keycloak.192.168.59.102.nip.io
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
              service:
                name: keycloak
                port:
                  number: 8080
